--- a/Módulo 1/CSharp/Projeto fundamentos C# com VS Code/EXEMPLOTESTE/EXEMPLOTESTE.csproj
+++ b/Módulo 1/CSharp/Projeto fundamentos C# com VS Code/EXEMPLOTESTE/EXEMPLOTESTE.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\BootcampDio.Common\BootcampDio.Common.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
